--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
-        "concurrently": "^9.1.2",
+        "concurrently": "^9.2.0",
         "eslint": "^9.20.1",
         "globals": "^15.15.0",
+        "sass": "^1.89.2",
         "typescript-eslint": "^8.24.0"
     }
 }
