--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
-  "compilerOptions": {     
+  "compilerOptions": {  
+    "module": "ES6",   
     "target": "ES6",
     "sourceMap": true,
+    "rootDir": "app",
     "outDir": "dist",
     "moduleResolution": "node"
   }
