--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "scripts": {
-        "start": "concurrently \"tsc --watch\" \"sass --watch app:dist\""
+        "dev": "vite"
     },
     "devDependencies": {
         "@eslint/js": "^9.20.0",
+        "@types/node": "^24.9.2",
         "concurrently": "^9.1.2",
         "eslint": "^9.20.1",
         "globals": "^15.15.0",
-        "typescript-eslint": "^8.24.0"
+        "sass-embedded": "^1.93.2",
+        "typescript-eslint": "^8.24.0",
+        "vite": "^7.1.12"
     }
 }
